fix: align weather location color

--- a/src/constants/color.css
+++ b/src/constants/color.css
@@ -93,7 +93,7 @@
     --clr-text-alpha-2: hsla(0, 0%, 13%, 0.05);
     --clr-panel-bg: var(--clr-neutral-light-alpha);
     --clr-panel-border: var(--clr-neutral-light-alpha);
-    --clr-weather-location: var(--clr-on-dark);
+    --clr-weather-location: var(--clr-text);
 
     --clr-overlay: #0005;
     --clr-trigger: #52a5;
@@ -154,7 +154,7 @@
     --clr-text-alpha-2: hsla(218, 21%, 86%, 0.12);
     --clr-panel-bg: hsla(228, 19%, 14%, 0.78);
     --clr-panel-border: hsla(262, 69%, 74%, 0.24);
-    --clr-weather-location: var(--clr-on-dark);
+    --clr-weather-location: var(--clr-text);
 
     --clr-overlay: #0008;
     --clr-trigger: var(--clr-primary-alpha);
